--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -54,18 +54,30 @@
 
 
 <section class='landing-page__section landing-page__section--about'>
-        <h2 class="section__title">About</h2>
-        <p class="section__copy section__copy--left">
+        <div class="section__copy--left">
+            <h2 class="section__title">About</h2>
+        <p class="section__copy">
             Bacon ipsum dolor amet drumstick jerky swine boudin rump, chuck andouille shank corned beef cow. Short loin bresaola kevin tenderloin pork belly, doner landjaeger prosciutto alcatra frankfurter sausage pork chop turkey boudin strip steak. <span>Turducken turkey t-bone ham.</span>
         </p>
-        <img class="about-img" src="/assets/svgs/all-platforms.svg">
-</section> <!-- /.landing-page__section--how -->
+        </div>
+        <img class="about-img about-img--right" src="/assets/svgs/all-platforms.svg">
+</section> <!-- /.landing-page__section--about -->
+
+<section class='landing-page__section landing-page__section--contact'>
+
+        <img class="about-img about-img--left" src="/assets/svgs/pigeon.svg">
+        <div class="section__copy--right">
+        <h2 class="section__title">Contact</h2>
+        <p class="section__copy">
+            Bacon ipsum dolor amet drumstick jerky swine boudin rump, chuck andouille shank corned beef cow. Short loin bresaola kevin tenderloin pork belly, doner landjaeger prosciutto alcatra frankfurter sausage pork chop turkey boudin strip steak. Turducken turkey t-bone ham.
+        </p>
+        </div>
+</section> <!-- /.landing-page__section--contact -->
 
 <footer class="landing-page__footer">
     <img src="/assets/mwib_font.png" class="footer__img">
     <div class="footer__left">
         <ul class="footer__list">
-            <li class="footer__list-item"><a href="#" class="footer__link">Sign Up</a></li>
             <li class="footer__list-item"><a href="#" class="footer__link">Sign In</a></li>
             <li class="footer__list-item"><a href="#" class="footer__link">Contact</a></li>
             <li class="footer__list-item"><a href="#" class="footer__link">How It Works</a></li>
