--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,9 +6,9 @@
     </div><!-- /.landing-page__nav--left -->
     <div class="landing-page__nav--right">
         <ul class="landing-page__nav-list">
-            <li class="landing-page__nav-item"><a href="#" class="landing-page__nav-link">How It Works</a></li>
-            <li class="landing-page__nav-item"><a href="#" class="landing-page__nav-link">About</a></li>
-            <li class="landing-page__nav-item"><a href="#" class="landing-page__nav-link">Contact</a></li>
+            <li class="landing-page__nav-item"><a href="#how" class="landing-page__nav-link">How It Works</a></li>
+            <li class="landing-page__nav-item"><a href="#about" class="landing-page__nav-link">About</a></li>
+            <li class="landing-page__nav-item"><a href="#contact" class="landing-page__nav-link">Contact</a></li>
             <li class="landing-page__nav-item"><a href="/signin" class="landing-page__nav-link landing-page__nav-link--login">Sign in</a></li>
         </ul>
     </div><!-- /.landing-page__nav--right -->
@@ -34,7 +34,7 @@
     <img class="landing-page__mtns" src="/assets/mountain.png">
 </section><!-- /.landing-page__landscape -->
 
-<section class='landing-page__section landing-page__section--how'>
+<section id="how" class='landing-page__section landing-page__section--how'>
         <h2 class="section__title">How it Works</h2>
         <div class="how__tout">
             <img src="/assets/landing_icon_1.png" class="how-it-works-image">
@@ -53,7 +53,7 @@
 </section> <!-- /.landing-page__section--how -->
 
 
-<section class='landing-page__section landing-page__section--about'>
+<section id="about" class='landing-page__section landing-page__section--about'>
         <div class="section__copy--left">
             <h2 class="section__title">About</h2>
         <p class="section__copy">
@@ -63,7 +63,7 @@
         <img class="about-img about-img--right" src="/assets/svgs/all-platforms.svg">
 </section> <!-- /.landing-page__section--about -->
 
-<section class='landing-page__section landing-page__section--contact'>
+<section id="contact" class='landing-page__section landing-page__section--contact'>
 
         <img class="about-img about-img--left" src="/assets/svgs/pigeon.svg">
         <div class="section__copy--right">
@@ -78,10 +78,10 @@
     <img src="/assets/mwib_font.png" class="footer__img">
     <div class="footer__left">
         <ul class="footer__list">
-            <li class="footer__list-item"><a href="#" class="footer__link">Sign In</a></li>
-            <li class="footer__list-item"><a href="#" class="footer__link">Contact</a></li>
-            <li class="footer__list-item"><a href="#" class="footer__link">How It Works</a></li>
-            <li class="footer__list-item"><a href="#" class="footer__link">About</a></li>
+            <li class="footer__list-item"><a href="/signin" class="footer__link">Sign In</a></li>
+            <li class="footer__list-item"><a href="how" class="footer__link">How It Works</a></li>
+            <li class="footer__list-item"><a href="about" class="footer__link">About</a></li>
+            <li class="footer__list-item"><a href="contact" class="footer__link">Contact</a></li>
         </ul>
     </div><!-- /.footer__left -->
 
