--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -79,9 +79,9 @@
     <div class="footer__left">
         <ul class="footer__list">
             <li class="footer__list-item"><a href="/signin" class="footer__link">Sign In</a></li>
-            <li class="footer__list-item"><a href="how" class="footer__link">How It Works</a></li>
-            <li class="footer__list-item"><a href="about" class="footer__link">About</a></li>
-            <li class="footer__list-item"><a href="contact" class="footer__link">Contact</a></li>
+            <li class="footer__list-item"><a href="#how" class="footer__link">How It Works</a></li>
+            <li class="footer__list-item"><a href="#about" class="footer__link">About</a></li>
+            <li class="footer__list-item"><a href="#contact" class="footer__link">Contact</a></li>
         </ul>
     </div><!-- /.footer__left -->
 
