--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <% if signups_allowed? %>
 <div class='mobile-form'>
-    <div class="welcome-box-m">Play Games. Earn Cash.</div>
+    <div class="welcome-box-m">Play Free Games. Earn Real Cash.</div>
     <% if @facebook_link %>
       <%= link_to @facebook_link do %>
         <%= image_tag 'facebook_button.png', :class => 'facebook-signup' %>
@@ -9,7 +9,7 @@
       <%= link_to "/auth/facebook" do %>
       <button class="btn--form btn--form-fb">
           <i class="fa fa-facebook btn--form__icon"></i>
-          <h1 class="btn--form__copy">Register with Facebook</h1>
+          <h1 class="btn--form__copy">Register with facebook</h1>
       </button><!-- /.btn--form -->
       <% end %>
     <% end %>
@@ -27,7 +27,6 @@
     </button><!-- /.btn--form -->
 
     <div class='email-form'>
-      <h2> Register with email </h2>
       <%= form_for(@user) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
@@ -51,7 +50,7 @@
 
       <% end %>
     </div>
-      <div class='sign-in'>
+      <div class='sign-in already-member'>
         Already have an account?  <%= link_to "Sign In", signin_path, class: "form__signin-link" %>
       </div>
 </div>
