Update landing page sign up

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -107,6 +107,10 @@
             text-align: center;
         }
 
+        .sign-up__closed .welcome-box-m {
+            text-align: left
+        }
+
         .small-note {
             color: $white;
             font-family: $sans;
