Changed default focused link styling

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -662,7 +662,8 @@ body { margin: 0; font-family: 'Varela Round', sans-serif; }
 a,
 a:focus,
 a:hover {
-  color: #6f5499;
+  color: $purple;
+  text-decoration: none;
 }
 
 /* Custom default button */
