--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -56,7 +56,7 @@
 
 
 <section id="about" class='landing-page__section landing-page__section--about'>
-        <div class="section__copy--left">
+        <div class="section__copy--wrap section__copy--left">
             <h2 class="section__title">About</h2>
         <p class="section__copy">
             Bacon ipsum dolor amet drumstick jerky swine boudin rump, chuck andouille shank corned beef cow. Short loin bresaola kevin tenderloin pork belly, doner landjaeger prosciutto alcatra frankfurter sausage pork chop turkey boudin strip steak. <span>Turducken turkey t-bone ham.</span>
@@ -65,10 +65,23 @@
         <img class="about-img about-img--right" src="/assets/svgs/all-platforms.svg">
 </section> <!-- /.landing-page__section--about -->
 
+
+<section id="about" class='landing-page__section landing-page__section--app'>
+        <div class="section__copy--wrap section__copy--right">
+            <h2 class="section__title">Get The App</h2>
+        <p class="section__copy">
+            Bacon ipsum dolor amet drumstick jerky swine boudin rump, chuck andouille shank corned beef cow. Short loin bresaola kevin tenderloin pork belly, doner landjaeger prosciutto alcatra frankfurter sausage pork chop turkey boudin strip steak.
+        </p>
+        </div>
+        <img class="about-img about-img--left" src="/assets/svgs/mobile-app.svg">
+</section> <!-- /.landing-page__section--about -->
+
+
 <section id="contact" class='landing-page__section landing-page__section--contact'>
 
-        <img class="about-img about-img--left" src="/assets/svgs/pigeon.svg">
-        <div class="section__copy--right">
+        <img class="about-img about-img--right" src="/assets/svgs/pigeon.svg">
+
+        <div class="section__copy--wrap section__copy--left">
         <h2 class="section__title">Contact</h2>
         <p class="section__copy">
             Bacon ipsum dolor amet drumstick jerky swine boudin rump, chuck andouille shank corned beef cow. Short loin bresaola kevin tenderloin pork belly, doner landjaeger prosciutto alcatra frankfurter sausage pork chop turkey boudin strip steak. Turducken turkey t-bone ham.
