--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -57,20 +57,20 @@
 
 <section id="about" class='landing-page__section landing-page__section--about'>
         <div class="section__copy--wrap section__copy--left">
-            <h2 class="section__title">About</h2>
+            <h2 class="section__title">About Us</h2>
         <p class="section__copy">
-            Bacon ipsum dolor amet drumstick jerky swine boudin rump, chuck andouille shank corned beef cow. Short loin bresaola kevin tenderloin pork belly, doner landjaeger prosciutto alcatra frankfurter sausage pork chop turkey boudin strip steak. <span>Turducken turkey t-bone ham.</span>
+            We set out to build a place where you can compete with your friends while playing games you love. We know your time is valuable, and we want to reward you for that. Luckee allows you to earn real rewards or contribute to causes that you care about just by playing our games.
         </p>
         </div>
         <img class="about-img about-img--right" src="/assets/svgs/all-platforms.svg">
 </section> <!-- /.landing-page__section--about -->
 
 
-<section id="about" class='landing-page__section landing-page__section--app'>
+<section id="app" class='landing-page__section landing-page__section--app'>
         <div class="section__copy--wrap section__copy--right">
             <h2 class="section__title">Get The App</h2>
         <p class="section__copy">
-            Bacon ipsum dolor amet drumstick jerky swine boudin rump, chuck andouille shank corned beef cow. Short loin bresaola kevin tenderloin pork belly, doner landjaeger prosciutto alcatra frankfurter sausage pork chop turkey boudin strip steak.
+            Bored in line? Game on the go by visiting www.getluckee.com on your smartphone or tablet, for a more app-like experience.
         </p>
         </div>
         <img class="about-img about-img--left" src="/assets/svgs/mobile-app.svg">
@@ -82,9 +82,9 @@
         <img class="about-img about-img--right" src="/assets/svgs/pigeon.svg">
 
         <div class="section__copy--wrap section__copy--left">
-        <h2 class="section__title">Contact</h2>
+        <h2 class="section__title">Contact Us</h2>
         <p class="section__copy">
-            Bacon ipsum dolor amet drumstick jerky swine boudin rump, chuck andouille shank corned beef cow. Short loin bresaola kevin tenderloin pork belly, doner landjaeger prosciutto alcatra frankfurter sausage pork chop turkey boudin strip steak. Turducken turkey t-bone ham.
+            Love the app? Have an issue? Want to suggest a cool new feature? Whatever it is, we’d love to hear it. Send us a message and we’ll be sure to get back to you as soon as possible!
         </p>
         </div>
 </section> <!-- /.landing-page__section--contact -->
