--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -86,6 +86,7 @@
         <p class="section__copy">
             Love the app? Have an issue? Want to suggest a cool new feature? Whatever it is, we’d love to hear it. Send us a message and we’ll be sure to get back to you as soon as possible!
         </p>
+        <a class="landing-page__btn" href="mailto:alfred@getluckee.com">Email Us</a>
         </div>
 </section> <!-- /.landing-page__section--contact -->
 
