--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,6 +37,7 @@
 </section><!-- /.landing-page__landscape -->
 
 <section id="how" class='landing-page__section landing-page__section--how'>
+    <div class="section__copy--wrap section__copy--wrap--how">
         <h2 class="section__title">How it Works</h2>
         <div class="how__tout">
             <img src="/assets/landing_icon_1.png" class="how-it-works-image">
@@ -52,12 +53,13 @@
             <img src="/assets/landing_icon_3.png" class="how-it-works-image">
             <p class="how-it-works-copy">Request a cash out!<br/> We will redeem your <br/> credits and send you <br/> cash within 24 hours.</p>
         </div>
+    </div>
 </section> <!-- /.landing-page__section--how -->
 
 
 <section id="about" class='landing-page__section landing-page__section--about'>
         <div class="section__copy--wrap section__copy--left">
-            <h2 class="section__title">About Us</h2>
+            <h2 class="section__title">About</h2>
         <p class="section__copy">
             We set out to build a place where you can compete with your friends while playing games you love. We know your time is valuable, and we want to reward you for that. Luckee allows you to earn real rewards or contribute to causes that you care about just by playing our games.
         </p>
@@ -70,7 +72,7 @@
         <div class="section__copy--wrap section__copy--right">
             <h2 class="section__title">Get The App</h2>
         <p class="section__copy">
-            Bored in line? Game on the go by visiting www.getluckee.com on your smartphone or tablet, for a more app-like experience.
+            Bored in line? Game on the go by visiting <span class="landing-page__email-link">www.getluckee.com</span> on your smartphone or tablet for a more app-like experience.
         </p>
         </div>
         <img class="about-img about-img--left" src="/assets/svgs/mobile-app.svg">
@@ -82,7 +84,7 @@
         <img class="about-img about-img--right" src="/assets/svgs/pigeon.svg">
 
         <div class="section__copy--wrap section__copy--left">
-        <h2 class="section__title">Contact Us</h2>
+        <h2 class="section__title">Contact</h2>
         <p class="section__copy">
             Love the app? Have an issue? Want to suggest a cool new feature? Whatever it is, we’d love to hear it. Send us a message and we’ll be sure to get back to you as soon as possible!
         </p>
