--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -56,7 +56,8 @@
 }
 
 .landing-page__btn {
-    border: 2px solid $purple;
+    background-color: $purple;
+    color: $white;
     border-radius: 4px;
     padding: 7.5px 25px;
     margin-top: 20px;
@@ -65,8 +66,8 @@
     @include transition;
 
     &:hover {
-        background-color: $purple;
-        color: white;
+        color: $white;
+        background-color: darken($purple, 5%);
     }
 }
 
