--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -64,7 +64,7 @@
             We set out to build a place where you can compete with your friends while playing games you love. We know your time is valuable, and we want to reward you for that. Luckee allows you to earn real rewards or contribute to causes that you care about just by playing our games.
         </p>
         </div>
-        <img class="about-img about-img--right" src="/assets/svgs/all-platforms.svg">
+        <img class="about-img about-img--right" src="/assets/svgs/gamer.svg">
 </section> <!-- /.landing-page__section--about -->
 
 
@@ -75,7 +75,7 @@
             Bored in line? Game on the go by visiting <span class="landing-page__email-link">www.getluckee.com</span> on your smartphone or tablet for a more app-like experience.
         </p>
         </div>
-        <img class="about-img about-img--left" src="/assets/svgs/mobile-app.svg">
+        <img class="about-img about-img--left" src="/assets/svgs/mobile-app-white.svg">
 </section> <!-- /.landing-page__section--about -->
 
 
