--- a/app/assets/stylesheets/interior-update.css.scss
+++ b/app/assets/stylesheets/interior-update.css.scss
@@ -68,7 +68,7 @@
 .list-page__list {
     list-style: none;
     margin: 0 auto;
-    padding: 0 7.5% 20px;
+    padding: 60px 7.5% 20px;
 }
 .list-page__list-item {
     color: $dark-gray;
