Swap onboarding image for all platforms

--- a/app/views/static_pages/onboarding.html.erb
+++ b/app/views/static_pages/onboarding.html.erb
@@ -7,7 +7,7 @@
             <img src="/assets/onboarding-backdrop.jpg" alt="">
             <div class="container">
                 <h1 class="slides__title">Play free games. Earn real cash.</h1>
-                <div class="slides__tut-img slides__tut-img--bg" style="background-image: url(/assets/onboarding_1.png);">
+                <div class="slides__tut-img slides__tut-img--bg" style="background-image: url(/assets/svgs/all-platforms.svg); background-size: 80%;">
                 </div>
                 <div class="secondary-copy">
                         <h2 class="secondary__cap">Play Free Games</h2>
