--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,6 @@
 <li>
-  <%= link_to user.name, user %> | Email: <%= user.email %> | Game Sessions: <%= UserGameSession.where(user_id: user.id).count %> | Surveys: <%= UserSurvey.where(user_id: user.id, complete: true).count %> | Credits on hand : <span style="color:red;"><%= user.credits ||=0 %></span> | Lifetime Credits: <%= user.lifetime_credits ||= 0 %>
+  <% if user.oath_image %><%= image_tag(user.oath_image, :style=> "width:50px;height:50px;") %> <% else %> <%= image_tag('avatar-icon.png', :style=>"height:50px;width:50px;") %><% end %><%= link_to user.name, user %> Lifetime Credits: <%= user.lifetime_credits ||= 0 %>
 
-  <!-- Credits Deposited : <%# user.user_entries.size ||= 0 %>-->
 
   <% if current_user.admin? && !current_user?(user) %>
 
