--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <% content_for :body_class, "user-profile user-profile--desktop" %>
 
     <div class="profile-section profile__top">
-        <div class="profile__avatar" style="<% if current_user.oath_image %> background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></div>
+        <div class="profile__avatar" style="<% if @user.oath_image %> background-image: url(<%= @user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></div>
 
         <h1 class="profile__name"><%= @user.name %></h1>
     </div><!-- /.profile__top -->
@@ -20,8 +20,12 @@
             </div><!-- /.inline-tout__item -->
 
             <div class="inline-tout__item" data-toggle="tooltip" data-placement="bottom" title="Coming Soon!">
-                <h1 class="inline-tout__title">--</h1>
-                <h3 class="inline-tout__sub-title">Luckee Rank <i class="fa fa-info-circle"></i></h3>
+                    <% unless current_user?(@user) %>
+                      <%= render 'follow_form' if signed_in? %>
+                    <% end %>
+                      <section class="stats">
+                        <%= render '/shared/stats' %>
+                      </section>
             </div><!-- /.inline-tout__item -->
         </div><!-- /.profile__inline-tout -->
     </div><!-- /.profile-section -->
