Swap How It Works cash asset

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -50,7 +50,7 @@
         </div>
 
         <div class="how__tout">
-            <img src="/assets/landing_icon_3.png" class="how-it-works-image">
+            <img src="/assets/cash-money.png" class="how-it-works-image">
             <p class="how-it-works-copy">Request a cash out!<br/> We will redeem your <br/> credits and send you <br/> cash within 24 hours.</p>
         </div>
     </div>
