--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -74,7 +74,7 @@
 .landing-page__nav-link--login {
     border: 2px solid $white;
     border-radius: 4px;
-    padding: 7.5px 25px;
+    padding: 5px 25px;
     @include transition;
 
     &:hover {
@@ -181,7 +181,7 @@
 }
 
 .landing-page__section--about {
-    background-color: $clouds;
+    // background-color: $clouds;
 }
 
 .landing-page__section--how {
