Swap asset to alternate skintone and bold desktop title

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -121,6 +121,7 @@
 
         .welcome-box-m {
             text-align: center;
+            font-family: $sans-sb;
         }
 
         .sign-up__closed .welcome-box-m {
