--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -75,7 +75,7 @@
             Bored in line? Game on the go by visiting <span class="landing-page__email-link">www.getluckee.com</span> on your smartphone or tablet for a more app-like experience.
         </p>
         </div>
-        <img class="about-img about-img--left" src="/assets/svgs/get-app.svg">
+        <img class="about-img about-img--left" src="/assets/svgs/get-app-alt.svg">
 </section> <!-- /.landing-page__section--about -->
 
 
