Update copy on desktop landing to match that of mobile onboarding

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -292,8 +292,11 @@
 }
 
 .how-it-works-copy {
+    margin-top: 10px;
     color: $white;
     font-family: $sans;
+    max-width: 200px;
+    margin: auto;
 }
 
 .landing-page__windmill-base {
