--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -41,17 +41,17 @@
         <h2 class="section__title">How it Works</h2>
         <div class="how__tout">
             <img src="/assets/landing_icon_1.png" class="how-it-works-image">
-            <p class="how-it-works-copy">Play any game to<br/> earn credits</p>
+            <p class="how-it-works-copy">You earn credits by playing any of our games on any device</p>
         </div>
 
         <div class="how__tout">
             <img src="/assets/landing_icon_2.png" class="how-it-works-image">
-            <p class="how-it-works-copy">Earn enough<br/> credits to cash <br/> out</p>
+            <p class="how-it-works-copy">Once you have earned enough credits you can redeem them for rewards</p>
         </div>
 
         <div class="how__tout">
             <img src="/assets/cash-money.png" class="how-it-works-image">
-            <p class="how-it-works-copy">Request a cash out!<br/> We will redeem your <br/> credits and send you <br/> cash within 24 hours.</p>
+            <p class="how-it-works-copy">Redeem your credits for cash or donate the value of your credits to charity!</p>
         </div>
     </div>
 </section> <!-- /.landing-page__section--how -->
